@@ -1,6 +1,5 @@
 [global]
 system = Debian
-#virtualizer = Xen
 virtualizer = Virt
 verbose = 1
 wait = 0
@@ -8,6 +7,7 @@ wait = 0
 [paths]
 images = /var/tmp/anste-images
 logs = /var/www/anste
+snapshots = /var/tmp/anste-snapshots
 
 [ansted]
 port = 8000
@@ -18,17 +18,13 @@ port = 8001
 [comm]
 iface = anste0
 first-address = 10.6.7.10
-#first-address = 192.168.45.220
 gateway = 10.6.7.1
-#gateway = 192.168.45.41
 nat-iface = br0
 
 [deploy]
 auto-create-images = 1
 
 [selenium]
-#rc-jar = /home/josh/selenium-rc/selenium-server.jar
-#browser = *firefox /home/josh/firefox/firefox-bin
 video = 0
 record-all = 1
 
@@ -38,9 +34,6 @@ size = 800Mb
 memory = 512Mb
 fs = ext3
 image = full
-#kernel = /boot/vmlinuz-2.6.18-5-xen-686
-#initrd = /boot/initrd.img-2.6.18-5-xen-686
-#mirror = http://192.168.45.4/debian
 mirror = http://en.archive.ubuntu.com/ubuntu
 
 [virt-options]
