@@ -24,6 +24,7 @@ use ANSTE::Config;
 use ANSTE::Exceptions::MissingArgument;
 use ANSTE::Exceptions::InvalidType;
 use ANSTE::Exceptions::InvalidFile;
+use ANSTE::System::System;
 
 use Perl6::Junction qw(any);
 
@@ -52,8 +53,8 @@ use Perl6::Junction qw(any);
 #
 sub new # (host) returns new HostImageSetup object
 {
-	my ($class, $host) = @_;
-	my $self = {};
+    my ($class, $host) = @_;
+    my $self = {};
 
     defined $host or
         throw ANSTE::Exceptions::MissingArgument('host');
@@ -63,17 +64,12 @@ sub new # (host) returns new HostImageSetup object
                                             'ANSTE::Scenario::Host');
     }
 
-	$self->{host} = $host;
-    my $system = ANSTE::Config->instance()->system();
+    $self->{host} = $host;
+    $self->{system} = ANSTE::System::System->instance();
 
-    eval "use ANSTE::System::$system";
-    die "Can't load package $system: $@" if $@;
+    bless($self, $class);
 
-    $self->{system} = "ANSTE::System::$system"->new();
-
-	bless($self, $class);
-
-	return $self;
+    return $self;
 }
 
 # Method: writeScript
@@ -91,7 +87,7 @@ sub new # (host) returns new HostImageSetup object
 #
 sub writeScript # (file)
 {
-	my ($self, $file) = @_;
+    my ($self, $file) = @_;
 
     defined $file or
         throw ANSTE::Exceptions::MissingArgument('file');
@@ -100,23 +96,23 @@ sub writeScript # (file)
         throw ANSTE::Exceptions::InvalidFile('file', $file);
     }
 
-	print $file "#!/bin/sh\n";
-	my $name = $self->{host}->name();
-	my $desc = $self->{host}->desc();
-	print $file "\n# Configuration file for host $name\n";
-	print $file "# Server description: $desc\n";
-	print $file "# Generated by ANSTE\n\n";
+    print $file "#!/bin/sh\n";
+    my $name = $self->{host}->name();
+    my $desc = $self->{host}->desc();
+    print $file "\n# Configuration file for host $name\n";
+    print $file "# Server description: $desc\n";
+    print $file "# Generated by ANSTE\n\n";
 
     $self->_addTemporaryNameServer($file);
 
-	my @packages = @{$self->{host}->packages()->list()};
+    my @packages = @{$self->{host}->packages()->list()};
     if (@packages) {
         $self->_writePreInstall($file);
         $self->_writePackageInstall($file, @packages);
         $self->_writePostInstall($file);
     }
-	$self->_writeNetworkConfig($file);
-	$self->_writeHostsConfig($file);
+    $self->_writeNetworkConfig($file);
+    $self->_writeHostsConfig($file);
 }
 
 sub _addTemporaryNameServer # (file)
@@ -145,7 +141,7 @@ sub _writePreInstall # (file)
 
 sub _writePackageInstall # (file, @packages)
 {
-	my ($self, $file, @packages) = @_;
+    my ($self, $file, @packages) = @_;
 
     my $system = $self->{system};
 
@@ -167,14 +163,14 @@ sub _writePostInstall # (file)
 
 sub _writeNetworkConfig # (file)
 {
-	my ($self, $file) = @_;
+    my ($self, $file) = @_;
 
     my $system = $self->{system};
     my $host = $self->{host};
 
     my $config = $system->networkConfig($host->network());
 
-	print $file "# Write network configuration\n";
+    print $file "# Write network configuration\n";
     print $file "$config\n\n";
 
     print $file "# Update network configuration\n";
@@ -204,7 +200,7 @@ sub _writeNetworkConfig # (file)
 
 sub _writeHostsConfig # (file)
 {
-	my ($self, $file) = @_;
+    my ($self, $file) = @_;
 
     my $system = $self->{system};
     my $thisHost = $self->{host};
@@ -231,7 +227,7 @@ sub _writeHostsConfig # (file)
 
     if (%hostAddress) {
         my $config = $system->hostsConfig(%hostAddress);
-	    print $file "# Write hosts configuration\n";
+        print $file "# Write hosts configuration\n";
         print $file "$config\n\n";
     }
 }
