@@ -23,6 +23,7 @@ use ANSTE::Config;
 use ANSTE::Exceptions::MissingArgument;
 use ANSTE::Exceptions::InvalidType;
 use ANSTE::Exceptions::InvalidFile;
+use ANSTE::System::System;
 
 # Class: HostPreInstall
 #
@@ -51,8 +52,8 @@ use ANSTE::Exceptions::InvalidFile;
 #
 sub new # (image) returns new HostInstallGen object
 {
-	my ($class, $image) = @_;
-	my $self = {};
+    my ($class, $image) = @_;
+    my $self = {};
 
     defined $image or
         throw ANSTE::Exceptions::MissingArgument('image');
@@ -61,19 +62,13 @@ sub new # (image) returns new HostInstallGen object
         throw ANSTE::Exceptions::InvalidType('image',
                                              'ANSTE::Image::Image');
     }
-    
+
     $self->{image} = $image;
+    $self->{system} = ANSTE::System::System->instance();
 
-    my $system = ANSTE::Config->instance()->system();
+    bless($self, $class);
 
-    eval "use ANSTE::System::$system";
-    die "Can't load package $system: $@" if $@;
-
-    $self->{system} = "ANSTE::System::$system"->new();
-	
-	bless($self, $class);
-
-	return $self;
+    return $self;
 }
 
 # Method: writeScript
@@ -91,27 +86,27 @@ sub new # (image) returns new HostInstallGen object
 #
 sub writeScript # (file)
 {
-	my ($self, $file) = @_;
+    my ($self, $file) = @_;
 
     defined $file or
         throw ANSTE::Exceptions::MissingArgument('file');
-       
+
     if (not -w $file) {
         throw ANSTE::Exceptions::InvalidFile('file', $file);
     }
 
     my $hostname = $self->{image}->name();
 
-	print $file "#!/bin/sh\n";
-	print $file "\n# Hostname configuration file\n";
-	print $file "# Generated by ANSTE for host $hostname\n\n"; 
+    print $file "#!/bin/sh\n";
+    print $file "\n# Hostname configuration file\n";
+    print $file "# Generated by ANSTE for host $hostname\n\n";
 
     print $file "# Receives the mount point of the image as an argument\n";
     print $file 'MOUNT=$1'."\n\n";
 
     $self->_writeHostnameConfig($file);
     $self->_writeHostConfig($file);
-	$self->_writeInitialNetworkConfig($file);
+    $self->_writeInitialNetworkConfig($file);
     $self->_writeMasterAddress($file);
 }
 
@@ -120,7 +115,7 @@ sub _writeHostnameConfig # (file)
     my ($self, $file) = @_;
 
     my $system = $self->{system};
-    
+
     my $hostname = $self->{image}->name();
 
     print $file "# Write hostname config\n";
@@ -142,7 +137,7 @@ sub _writeHostConfig # (file)
 
 sub _writeInitialNetworkConfig # (file)
 {
-	my ($self, $file) = @_;
+    my ($self, $file) = @_;
 
     my $system = $self->{system};
     my $iface = $self->{image}->commInterface();
@@ -153,13 +148,13 @@ sub _writeInitialNetworkConfig # (file)
 
     my $config = $system->initialNetworkConfig($iface, $network);
 
-	print $file "# Write initial network configuration\n";
+    print $file "# Write initial network configuration\n";
     print $file "$config\n\n";
 }
 
 sub _writeMasterAddress # (file)
 {
-	my ($self, $file) = @_;
+    my ($self, $file) = @_;
 
     my $system = $self->{system};
 
